# News-generator-for-telegram-channel

./: .env.example  .gitignore  AboutApplication.md  README.md  alembic.ini  celery_worker.py  docker-compose.yml  pyproject.toml  requirements.txt  run_celery.bat  v2 README.md
alembic/: env.py
alembic/versions/: 36304f572c92_initial_tables.py
app/: celery_app.py  config.py  database.py  logger.py  main.py  models.py  tasks.py
app/ai/: openai_client.py
app/api/: endpoints.py  keywords.py  schemas.py  sources.py
app/news_parser/: load_site.py  news_collector.py  parser_habr.py  parser_rbk.py  parser_telegram.py
app/tasks/: news_tasks.py  post_tasks.py  telegram_tasks.py
app/utils/: rate_limit.py
