[project]
name = "generator-post-for-telegramm"
version = "0.1.0"
description = ""
authors = [
    {name = "MrJonson",email = "flashh@list.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standart] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "celery[redis] (>=5.6.2,<6.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (==5.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
